# computational-finance

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
advanced-pricing/: README.md
advanced-pricing/notebooks/: fourier_cos_method.ipynb  pde_df_schemes.ipynb  pde_fd_schemes.ipynb
mc-sensitivity-analysis/: README.md  monte_carlo_simulation.ipynb  pyproject.toml
mc-sensitivity-analysis/notebooks/: bump_and_revalue.ipynb  monte_carlo_simulation.ipynb  variance_reduction.ipynb
option-valuation/: README.md  pyproject.toml
option_valuation/: README.md  option_valuation.ipynb
