[project]
name = "computational-finance"
version = "0.1.0"
description = "Python tools for computational finance, including data analysis, modeling, and visualization."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
]

[tool.uv.workspace]
members = [
    "mc-sensitivity-analysis",
]
