[project]
name = "option-valuation"
version = "0.1.0"
description = "Option valuation using Binomial Trees and Black-Scholes models, including Delta Hedging simulations."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
